# knowledgeRes

./: .gitignore  CLAUDE.md  MCP_CONFIG_GUIDE.md  PERSONAL_KNOWLEDGE_GUIDE.md  PlanBT_TodoList.html  QUICK_START.md  README-SHARE.md  README.md  SUMMARY.md  UGC平台API输出分层需求文档.md  USAGE_EXAMPLES.md  claude_code_mcp_config.json  cleanup_csv.py  config.example.yaml  config.yaml  convert_ugc_doc.py  pyproject.toml  run_convert.py  temp_convert.py  temp_create_daily.json
.claude/: settings.local.json
.claude/commands/: agent-browser.md  baipishu.md  collect.md  competitive-ai-research.md  competitive-research.md  daily-weekly-report.md  digest.md  folderdoc-to-wiki.md  generate_daily.md  generate_monthly.md  generate_weekly.md  iwiki-doc.md  note-sync.md  recent.md  search.md  skill-creator.md  tapd-bug-ops.md  tapd-core.md  tapd-story-create.md  tapd-story-query.md  tapd-story-writing.md  topics.md  track.md  type-record-parser.md  web-browser.md  wow-whitepaper.md
.codebuddy/commands/: baipishu.md  competitive-research.md  confirm_requirement.md  generate_daily.md  generate_monthly.md  generate_weekly.md  news.md  note.md  plan.md  save.md  sync.md
config/: iwiki_mapping.json
scripts/: create_share_package.py  report_reminder.py  run_daily_digest.py  setup_report_tasks.py  test_extractor.py  test_extractors.py
skills/huashu-slides/: .env.example  README.md  SKILL.md  package-lock.json  package.json  requirements.txt
skills/ship-learn-next/: README.md  SKILL.md
src/md_to_excel_mcp/: __init__.py  __main__.py  server.py
src/pa/: __init__.py  __main__.py  cli.py  (+3 more)
(+78 files in other folders)
