[project]
name = "personal-assistant"
version = "0.1.0"
description = "基于 Claude Code CLI 的个人智能助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "rich>=13.0.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
pa = "pa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/pa"]

[tool.hatch.build.targets.wheel]
packages = ["src/pa"]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
